--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.2.3",
     "lottie-react-native": "^5.1.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
