--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
