date validation in checkOut and bug fixes

--- a/ios/fuddapp/Info.plist
+++ b/ios/fuddapp/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>UIAppFonts</key>
-	<array>	
+	<array>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
@@ -41,6 +41,11 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>JosefinSans.ttf</string>
+		<string>JosefinSans-Bold.ttf</string>
+		<string>JosefinSans-Italic-VariableFont_wght.ttf</string>
+		<string>JosefinSans-Medium.ttf</string>
+		<string>JosefinSans-SemiBold.ttf</string>
+		<string>JosefinSans-VariableFont_wght.ttf</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
@@ -56,7 +61,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
