--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.0.0",
-    "react-native-reanimated": "^2.14.2",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
